--- a/mario/css/base.css
+++ b/mario/css/base.css
@@ -15,8 +15,9 @@
     --blue-dark:rgb(92,148,252);
     /* --sky:rgb(147,147,252); */
 
-
-    --w:32rem;
+    --w:16rem;
+    /* --w:48rem; */
+    /* --w:256rem; */
     --wm:calc(-1*var(--w));
     --px:calc(var(--w) /16);
     --pxm:calc(-1*var(--px));
@@ -33,14 +34,6 @@ html,body{
     overflow-x: hidden; 
 }
 
-/* .container{
-    width: 1600px;
-    height: 1000px;
-    margin:auto;
-    border:1px solid black;
-    position: relative;
-} */
-
 div{
     position:absolute;
     width:var(--px);
@@ -48,15 +41,19 @@ div{
 }
 section{
     height: calc(var(--w)*15);
-    width: calc(var(--w)*208);
+    width: calc(var(--w)*215);
     position: relative;
     border:1px solid black;
     background-color: var(--blue-dark);
     box-shadow: 0 0 50rem 5rem #b3bdb3;
+    overflow: hidden;
 
 }
 main{
     position: absolute;
+    /* left: calc(var(--wm)*160); */
+    /* left: calc(var(--wm)*198);
+    bottom: calc(var(--wm)*8); */
 }
 body{
     position: relative;
