--- a/mario/css/bush.css
+++ b/mario/css/bush.css
@@ -110,8 +110,10 @@
     calc(var(--px)*12) calc(var(--pxm)*16) 0 0 var(--green-reflection);
     bottom:0;
     left:0;
-    width: 103%;
-    height: 103%;
+    /*  width: 103%;
+    height: 103%; */
+width: 100%;
+    height: 100%; 
     content: "";
     position: absolute;
     background-color: transparent;
