--- a/mario/css/coin.css
+++ b/mario/css/coin.css
@@ -27,8 +27,10 @@
     --bg-black:calc(var(--px)*4 ) calc(var(--pxm)*4 ) 0 calc(var(--px)*2 ) var(--black),calc(var(--px)*6 ) calc(var(--pxm)*8 ) 0 calc(var(--px)*2 ) var(--black),calc(var(--px)*6 ) calc(var(--pxm)*5 ) 0 calc(var(--px)*2 ) var(--black),calc(var(--px)*6) calc(var(--pxm)*11 ) 0 calc(var(--px) ) var(--black),calc(var(--px)*5) calc(var(--pxm)*12 ) 0 calc(var(--px) ) var(--black),calc(var(--px)*6) calc(var(--pxm)*2 ) 0 calc(var(--px) ) var(--black),calc(var(--px)*5) calc(var(--pxm)*1 ) 0 calc(var(--px) ) var(--black);
     bottom:0;
     left:0;
-    width: 103%;
-    height: 103%;
+    /* width: 103%;
+    height: 103%; */
+width: 100%;
+    height: 100%;
     content: "";
     position: absolute;
     background-color: transparent;
