--- a/mario/css/superground.css
+++ b/mario/css/superground.css
@@ -439,8 +439,10 @@
 
     bottom:0;
     left:0;
-    width: 103%;
-    height: 103%;
+    /* width: 103%;
+    height: 103%; */
+width: 100%;
+    height: 100%;
     content: "";
     position: absolute;
     background-color: var(--brown);
