--- a/mario/css/triplebush.css
+++ b/mario/css/triplebush.css
@@ -262,8 +262,10 @@
 
     bottom:0;
     left:0;
-    width: 103%;
-    height: 103%;
+    /* width: 103%;
+    height: 103%; */
+width: 100%;
+    height: 100%;
     content: "";
     position: absolute;
     background-color: transparent;
