--- a/mario/css/base.css
+++ b/mario/css/base.css
@@ -45,8 +45,8 @@ section{
     position: relative;
     border:1px solid black;
     background-color: var(--blue-dark);
-    box-shadow: 0 0 50rem 5rem #b3bdb3;
-    overflow: hidden;
+    /* box-shadow: 0 0 50rem 5rem #b3bdb3; */
+    overflow: hidden; 
 
 }
 main{
