[ADD] un semblant de controle de mario ...

--- a/mario/css/animations.css
+++ b/mario/css/animations.css
@@ -2,6 +2,8 @@
    iteration-count | direction | fill-mode | play-state | name */
 
 
+/* Feuille de style pas utilisé pour le moment */
+
 @keyframes upgiftbefore2{
     
     from{
