--- a/mario/css/base.css
+++ b/mario/css/base.css
@@ -13,11 +13,8 @@
     --green-odd:#887000; /* mario */
     --blue:#3cbcfc;
     --blue-dark:rgb(92,148,252);
-    /* --sky:rgb(147,147,252); */
 
     --w:32rem;
-    /* --w:48rem; */
-    /* --w:256rem; */
     --wm:calc(-1*var(--w));
     --px:calc(var(--w) /16);
     --pxm:calc(-1*var(--px));
@@ -34,10 +31,8 @@ html,.body{
     overflow-x: hidden; 
 }
 .body{
-    /* 1080 x 1920 px (verticale) */
-    /* width: 540px;
-    height: 960px; */
-    margin: auto;
+    height: calc(var(--w)*15);
+    /* margin: auto; */
 }
 
 div{
@@ -51,17 +46,13 @@ section{
     position: relative;
     border:1px solid black;
     background-color: var(--blue-dark);
-    /* box-shadow: 0 0 50rem 5rem #b3bdb3; */
     overflow: hidden; 
 
 }
 main{
     position: absolute;
-    top: 100px;
+    top: 0;
     left: 0;
-    /* left: calc(var(--wm)*160); */
-    /* left: calc(var(--wm)*198);
-    bottom: calc(var(--wm)*8); */
 }
 .body{
     position: relative;
@@ -69,7 +60,7 @@ main{
     align-items: center;
     flex-direction: column;
     background-color: #000;
-    height: 80vh;
+    /* height: 80vh; */
 }
 .pixel{
     position: absolute;
@@ -85,4 +76,121 @@ main{
 }
 .controls label {
     font-size: 16rem;
+}
+
+body main{
+    width: 100%;
+    height: 100%;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+    display: flex;
+}
+main::-webkit-scrollbar {  /* chrome */
+    width: 0 !important 
+}
+main{ /* firefox */
+    overflow: -moz-scrollbars-none; 
+}
+.body{ /* granpa */
+    overflow: hidden;
+    transform: rotate(0deg); /* permet de hack la position dad / son */
+}
+main section{ /* dad */
+    overflow-y: hidden;
+    scroll-snap-align: start;
+    scroll-margin-block-start: -30vw;
+    scroll-margin-block-end: 30vw;
+    margin: 0 30vw;
+
+    flex: 1 0 calc(var(--w)*215);
+}
+.mario{ /* son */
+    position: fixed;
+}
+
+
+aside.blah{
+    width: 100%;
+    background-color: #00a800;
+    height: 50px;
+    font-size: 20px;
+    text-align: center;
+}
+body{
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    height: 98vh;
+    background-color: black;
+}
+/* input{
+    display: absolute;
+    margin: auto;
+} */
+
+.start{
+    display: block;
+    z-index: 50;
+    position: absolute;
+    top: 50px;
+    font-size: 20px;
+    /* width: 100vw;
+    height: 100vh; */
+}
+body:focus-within p{
+    display: none;
+}
+
+.centered {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+
+  .nifaitniafaire{
+    position: fixed;
+    width: 40vw;
+    height: 100vw;
+    top: 0;
+    left: -1vw;
+    border-left: 32vw solid black;
+    border-right: 30vw solid black;
+    z-index: 60;
+}
+
+
+
+/********************************/
+  /* Css by Benoist */
+input {
+    display: none;
+}
+
+label {
+    position: absolute;
+    top: 50%;
+    left: 50vw;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-size: 30px;
+    z-index: 50;
+}
+
+.btn {
+    margin: 2rem;
+    display: inline-block;
+    padding: 1rem 4rem;
+    background-color: #000;
+    color: #fff;
+    border-radius: 50px;
+}
+
+body:focus-within input,
+body:focus-within label {
+    display: none;
 }
