--- a/mario/css/bush.css
+++ b/mario/css/bush.css
@@ -1,82 +1,83 @@
 .bush:before{
-    --outline:  calc(var(--px)*11) 0 0 0 var(--black),
-    calc(var(--px)*12) 0 0 0 var(--black),
-    calc(var(--px)*13) 0 0 0 var(--black),
-    calc(var(--px)*18) 0 0 0 var(--black),
-    calc(var(--px)*19) 0 0 0 var(--black),
-    calc(var(--px)*20) 0 0 0 var(--black),
-    calc(var(--px)*21) 0 0 0 var(--black),
-    calc(var(--px)*14) calc(var(--pxm)*1) 0 0 var(--black),
-    calc(var(--px)*15) calc(var(--pxm)*2) 0 0 var(--black),
-    calc(var(--px)*16) calc(var(--pxm)*1) 0 0 var(--black),
-    calc(var(--px)*17) calc(var(--pxm)*1) 0 0 var(--black),
-    calc(var(--px)*22) calc(var(--pxm)*1) 0 0 var(--black),
-    calc(var(--px)*23) calc(var(--pxm)*1) 0 0 var(--black),
-    calc(var(--px)*24) calc(var(--pxm)*2) 0 0 var(--black),
-    calc(var(--px)*25) calc(var(--pxm)*1) 0 0 var(--black),
-    calc(var(--px)*26) calc(var(--pxm)*1) 0 0 var(--black),
-    calc(var(--px)*27) calc(var(--pxm)*2) 0 0 var(--black),
-    calc(var(--px)*28) calc(var(--pxm)*2) 0 0 var(--black),
-    calc(var(--px)*29) calc(var(--pxm)*3) 0 0 var(--black),
-    calc(var(--px)*30) calc(var(--pxm)*3) 0 0 var(--black),
-    calc(var(--px)*31) calc(var(--pxm)*5) 0 0 var(--black),
-    calc(var(--px)*30) calc(var(--pxm)*6) 0 0 var(--black),
-    calc(var(--px)*29) calc(var(--pxm)*7) 0 0 var(--black),
-    calc(var(--px)*30) calc(var(--pxm)*8) 0 0 var(--black),
-    calc(var(--px)*31) calc(var(--pxm)*9) 0 0 var(--black),
-    calc(var(--px)*31) calc(var(--pxm)*10) 0 0 var(--black),
-    calc(var(--px)*31) calc(var(--pxm)*11) 0 0 var(--black),
-    calc(var(--px)*30) calc(var(--pxm)*12) 0 0 var(--black),
-    calc(var(--px)*29) calc(var(--pxm)*11) 0 0 var(--black),
-    calc(var(--px)*28) calc(var(--pxm)*12) 0 0 var(--black),
-    calc(var(--px)*28) calc(var(--pxm)*13) 0 0 var(--black),
-    calc(var(--px)*28) calc(var(--pxm)*14) 0 0 var(--black),
-    calc(var(--px)*27) calc(var(--pxm)*15) 0 0 var(--black),
-    calc(var(--px)*26) calc(var(--pxm)*14) 0 0 var(--black),
-    calc(var(--px)*25) calc(var(--pxm)*13) 0 0 var(--black),
-    calc(var(--px)*24) calc(var(--pxm)*14) 0 0 var(--black),
-    calc(var(--px)*24) calc(var(--pxm)*15) 0 0 var(--black),
-    calc(var(--px)*23) calc(var(--pxm)*16) 0 0 var(--black),
-    calc(var(--px)*23) calc(var(--pxm)*17) 0 0 var(--black),
-    calc(var(--px)*23) calc(var(--pxm)*18) 0 0 var(--black),
-    calc(var(--px)*22) calc(var(--pxm)*19) 0 0 var(--black),
-    calc(var(--px)*21) calc(var(--pxm)*20) 0 0 var(--black),
-    calc(var(--px)*20) calc(var(--pxm)*19) 0 0 var(--black),
-    calc(var(--px)*19) calc(var(--pxm)*20) 0 0 var(--black),
-    calc(var(--px)*19) calc(var(--pxm)*21) 0 0 var(--black),
-    calc(var(--px)*18) calc(var(--pxm)*22) 0 0 var(--black),
-    calc(var(--px)*17) calc(var(--pxm)*23) 0 0 var(--black),
-    calc(var(--px)*16) calc(var(--pxm)*23) 0 0 var(--black),
-    calc(var(--px)*15) calc(var(--pxm)*23) 0 0 var(--black),
-    calc(var(--px)*14) calc(var(--pxm)*23) 0 0 var(--black),
-    calc(var(--px)*13) calc(var(--pxm)*22) 0 0 var(--black),
-    calc(var(--px)*12) calc(var(--pxm)*21) 0 0 var(--black),
-    calc(var(--px)*11) calc(var(--pxm)*21) 0 0 var(--black),
-    calc(var(--px)*10) calc(var(--pxm)*20) 0 0 var(--black),
-    calc(var(--px)*10) calc(var(--pxm)*19) 0 0 var(--black),
-    calc(var(--px)*10) calc(var(--pxm)*18) 0 0 var(--black),
-    calc(var(--px)*9) calc(var(--pxm)*17) 0 0 var(--black),
-    calc(var(--px)*8) calc(var(--pxm)*16) 0 0 var(--black),
-    calc(var(--px)*7) calc(var(--pxm)*15) 0 0 var(--black),
-    calc(var(--px)*6) calc(var(--pxm)*15) 0 0 var(--black),
-    calc(var(--px)*5) calc(var(--pxm)*15) 0 0 var(--black),
-    calc(var(--px)*4) calc(var(--pxm)*14) 0 0 var(--black),
-    calc(var(--px)*3) calc(var(--pxm)*13) 0 0 var(--black),
-    calc(var(--px)*2) calc(var(--pxm)*11) 0 0 var(--black),
-    calc(var(--px)*1) calc(var(--pxm)*11) 0 0 var(--black),
-    calc(var(--px)*0) calc(var(--pxm)*10) 0 0 var(--black),
-    calc(var(--px)*0) calc(var(--pxm)*9) 0 0 var(--black),
-    calc(var(--px)*1) calc(var(--pxm)*8) 0 0 var(--black),
-    calc(var(--px)*2) calc(var(--pxm)*7) 0 0 var(--black),
-    calc(var(--px)*3) calc(var(--pxm)*6) 0 0 var(--black),
-    calc(var(--px)*4) calc(var(--pxm)*5) 0 0 var(--black),
-    calc(var(--px)*4) calc(var(--pxm)*4) 0 0 var(--black),
-    calc(var(--px)*5) calc(var(--pxm)*3) 0 0 var(--black),
-    calc(var(--px)*6) calc(var(--pxm)*3) 0 0 var(--black),
-    calc(var(--px)*7) calc(var(--pxm)*3) 0 0 var(--black),
-    calc(var(--px)*8) calc(var(--pxm)*2) 0 0 var(--black),
-    calc(var(--px)*9) calc(var(--pxm)*1) 0 0 var(--black),
-    calc(var(--px)*10) calc(var(--pxm)*1) 0 0 var(--black);
+    --sbc:0 0 var(--black);
+    --outline:  calc(var(--px)*11) 0 var(--sbc),
+    calc(var(--px)*12) 0 var(--sbc),
+    calc(var(--px)*13) 0 var(--sbc),
+    calc(var(--px)*18) 0 var(--sbc),
+    calc(var(--px)*19) 0 var(--sbc),
+    calc(var(--px)*20) 0 var(--sbc),
+    calc(var(--px)*21) 0 var(--sbc),
+    calc(var(--px)*14) calc(var(--pxm)*1) var(--sbc),
+    calc(var(--px)*15) calc(var(--pxm)*2) var(--sbc),
+    calc(var(--px)*16) calc(var(--pxm)*1) var(--sbc),
+    calc(var(--px)*17) calc(var(--pxm)*1) var(--sbc),
+    calc(var(--px)*22) calc(var(--pxm)*1) var(--sbc),
+    calc(var(--px)*23) calc(var(--pxm)*1) var(--sbc),
+    calc(var(--px)*24) calc(var(--pxm)*2) var(--sbc),
+    calc(var(--px)*25) calc(var(--pxm)*1) var(--sbc),
+    calc(var(--px)*26) calc(var(--pxm)*1) var(--sbc),
+    calc(var(--px)*27) calc(var(--pxm)*2) var(--sbc),
+    calc(var(--px)*28) calc(var(--pxm)*2) var(--sbc),
+    calc(var(--px)*29) calc(var(--pxm)*3) var(--sbc),
+    calc(var(--px)*30) calc(var(--pxm)*3) var(--sbc),
+    calc(var(--px)*31) calc(var(--pxm)*5) var(--sbc),
+    calc(var(--px)*30) calc(var(--pxm)*6) var(--sbc),
+    calc(var(--px)*29) calc(var(--pxm)*7) var(--sbc),
+    calc(var(--px)*30) calc(var(--pxm)*8) var(--sbc),
+    calc(var(--px)*31) calc(var(--pxm)*9) var(--sbc),
+    calc(var(--px)*31) calc(var(--pxm)*10) var(--sbc),
+    calc(var(--px)*31) calc(var(--pxm)*11) var(--sbc),
+    calc(var(--px)*30) calc(var(--pxm)*12) var(--sbc),
+    calc(var(--px)*29) calc(var(--pxm)*11) var(--sbc),
+    calc(var(--px)*28) calc(var(--pxm)*12) var(--sbc),
+    calc(var(--px)*28) calc(var(--pxm)*13) var(--sbc),
+    calc(var(--px)*28) calc(var(--pxm)*14) var(--sbc),
+    calc(var(--px)*27) calc(var(--pxm)*15) var(--sbc),
+    calc(var(--px)*26) calc(var(--pxm)*14) var(--sbc),
+    calc(var(--px)*25) calc(var(--pxm)*13) var(--sbc),
+    calc(var(--px)*24) calc(var(--pxm)*14) var(--sbc),
+    calc(var(--px)*24) calc(var(--pxm)*15) var(--sbc),
+    calc(var(--px)*23) calc(var(--pxm)*16) var(--sbc),
+    calc(var(--px)*23) calc(var(--pxm)*17) var(--sbc),
+    calc(var(--px)*23) calc(var(--pxm)*18) var(--sbc),
+    calc(var(--px)*22) calc(var(--pxm)*19) var(--sbc),
+    calc(var(--px)*21) calc(var(--pxm)*20) var(--sbc),
+    calc(var(--px)*20) calc(var(--pxm)*19) var(--sbc),
+    calc(var(--px)*19) calc(var(--pxm)*20) var(--sbc),
+    calc(var(--px)*19) calc(var(--pxm)*21) var(--sbc),
+    calc(var(--px)*18) calc(var(--pxm)*22) var(--sbc),
+    calc(var(--px)*17) calc(var(--pxm)*23) var(--sbc),
+    calc(var(--px)*16) calc(var(--pxm)*23) var(--sbc),
+    calc(var(--px)*15) calc(var(--pxm)*23) var(--sbc),
+    calc(var(--px)*14) calc(var(--pxm)*23) var(--sbc),
+    calc(var(--px)*13) calc(var(--pxm)*22) var(--sbc),
+    calc(var(--px)*12) calc(var(--pxm)*21) var(--sbc),
+    calc(var(--px)*11) calc(var(--pxm)*21) var(--sbc),
+    calc(var(--px)*10) calc(var(--pxm)*20) var(--sbc),
+    calc(var(--px)*10) calc(var(--pxm)*19) var(--sbc),
+    calc(var(--px)*10) calc(var(--pxm)*18) var(--sbc),
+    calc(var(--px)*9) calc(var(--pxm)*17) var(--sbc),
+    calc(var(--px)*8) calc(var(--pxm)*16) var(--sbc),
+    calc(var(--px)*7) calc(var(--pxm)*15) var(--sbc),
+    calc(var(--px)*6) calc(var(--pxm)*15) var(--sbc),
+    calc(var(--px)*5) calc(var(--pxm)*15) var(--sbc),
+    calc(var(--px)*4) calc(var(--pxm)*14) var(--sbc),
+    calc(var(--px)*3) calc(var(--pxm)*13) var(--sbc),
+    calc(var(--px)*2) calc(var(--pxm)*11) var(--sbc),
+    calc(var(--px)*1) calc(var(--pxm)*11) var(--sbc),
+    calc(var(--px)*0) calc(var(--pxm)*10) var(--sbc),
+    calc(var(--px)*0) calc(var(--pxm)*9) var(--sbc),
+    calc(var(--px)*1) calc(var(--pxm)*8) var(--sbc),
+    calc(var(--px)*2) calc(var(--pxm)*7) var(--sbc),
+    calc(var(--px)*3) calc(var(--pxm)*6) var(--sbc),
+    calc(var(--px)*4) calc(var(--pxm)*5) var(--sbc),
+    calc(var(--px)*4) calc(var(--pxm)*4) var(--sbc),
+    calc(var(--px)*5) calc(var(--pxm)*3) var(--sbc),
+    calc(var(--px)*6) calc(var(--pxm)*3) var(--sbc),
+    calc(var(--px)*7) calc(var(--pxm)*3) var(--sbc),
+    calc(var(--px)*8) calc(var(--pxm)*2) var(--sbc),
+    calc(var(--px)*9) calc(var(--pxm)*1) var(--sbc),
+    calc(var(--px)*10) calc(var(--pxm)*1) var(--sbc);
 
     --bg:calc(var(--px)*15) calc(var(--pxm)*9) 0 calc(var(--px)*7) var(--green-soft),
     calc(var(--px)*10) calc(var(--pxm)*9) 0 calc(var(--px)*5) var(--green-soft),
@@ -108,11 +109,11 @@
     calc(var(--px)*14) calc(var(--pxm)*17) 0 0 var(--green-reflection),
     calc(var(--px)*13) calc(var(--pxm)*17) 0 0 var(--green-reflection),
     calc(var(--px)*12) calc(var(--pxm)*16) 0 0 var(--green-reflection);
+    
     bottom:0;
     left:0;
-    /*  width: 103%;
-    height: 103%; */
-width: 100%;
+    width: 100%;
+    
     height: 100%; 
     content: "";
     position: absolute;
